______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.23:

* ResultCode class is now public.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.22:

* Improved message when logging succeeded calls.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.21:

* Fixed bug in successful call logging.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.20:

* Cleaned up fallback initialization of Log4J.

* Class APIServlet directly implements Servlet interface, no longer derives
  from HttpServlet class.

* Fixed bug: Also logging successful calls again.

* Result codes are now in external .rcd files.

* Changed term 'return code' to 'result code' in quite some locations.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.19:

* Fixed NPE in CallContext.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.18:

* Logging different types of InvalidParameters errors.

* Linking to Jakarta Commons Logging API documentation.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.17:

* Greatly improved logging. Using Jakarta Commons library. Added it to the
  dependencies.

* Moved handleCall(CallContext) from API class to
  Function class.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.16:

* Fixed problem introduced in 0.15 that keeps the generated java-fundament
  code from compiling.

* Made _log field in the Function class available to subclasses.

* Logging missing parameters.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.15:
